[project]
name = "explo-eclairage"
version = "0.1.0"
description = "Analysis of the effects of shut-off policies (public lighting) on crime in France"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "altair==5.4.0",
    "geopandas>=1.1.3",
    "geopolars>=0.1.0a4",
    "matplotlib>=3.10.8",
    "polars>=1.39.0",
    "pyarrow>=23.0.1",
    "ruff>=0.15.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/explo_eclairage"]
